--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,9 +1,9 @@
-
-
 @import "tailwindcss";
-/* @tailwind base;
+/* 
+
+@tailwind base;
 @tailwind components;
-@tailwind utilities; */
+@tailwind utilities;  */
 * {
   margin: 0;
   padding: 0;
@@ -13,7 +13,7 @@
 
 @layer base {
   body {
-    @apply font-inter; 
+     @apply font-inter;  
   }
 }
 
